# brredit

./: .gitmodules  CMakeLists.txt  imgui.ini  latest.brr
.cache/clangd/index/: AssetLoader.cc.7AF7FA020E256166.idx  AssetLoader.hh.86EDF3A9F630AEA1.idx  Camera.cc.B3248EAD6F870241.idx  Camera.hh.70E383021574678E.idx  Editor.cc.6A2E288D21138E56.idx  Editor.cc.925712C7A3DB2199.idx  Editor.hh.B417F771CA64ABEE.idx  Editor.hh.C10C978F15D87AC3.idx  FA6FreeSolidFontData.h.7F9107EF5370949B.idx  File.cc.73720CDAE1EB5965.idx  File.cc.785327F68EA57326.idx  File.hh.9524FE22C1B71957.idx  File.hh.A8319307B3FC524E.idx  Game.cc.B93F72EFDC96C65F.idx  Game.hh.45877CA2436D5533.idx  GameObject.cc.315CA636DF586543.idx  GameObject.cc.8B299326893104C9.idx  GameObject.hh.1DEFBD6BA6BB6BF1.idx  GameObject.hh.A5F620DA1D5F6F3F.idx  Globals.hh.054B029BDEC26551.idx  Globals.hh.147C1982403F84FA.idx  IconsFontAwesome6.h.7DFBD695401448BF.idx  Player.cc.4AC1A36274DDF906.idx  Player.hh.D691AF6B7B606925.idx  cgltf.h.5A733F7ED17A8B1D.idx  cgltf.h.7D797C20847DE309.idx  config.h.5ED42586F9064D2A.idx  config.h.878B6895664795BE.idx  context.c.5C8A4D080C506A42.idx  context.c.B73D12AE58C19BC6.idx  dr_mp3.h.1ED0567FD1AAAEEF.idx  dr_mp3.h.E98DC92EA68F8FF6.idx  dr_wav.h.75D3287EF9883625.idx  dr_wav.h.DA092E69F24DB9B6.idx  egl_context.c.4C642583F0FCF80B.idx  egl_context.c.BE9C80203BBB9429.idx  font_awesome.cpp.4B4D781181786885.idx  glad.h.4BC61958FB1D578E.idx  glad.h.65899173CD5A274E.idx  glfw3.h.563E8AEC6C6FE010.idx  (+152 more)
scripts/: build.sh  format.sh
src/: Editor.cc  Editor.hh  File.cc  GameObject.cc  GameObject.hh  Globals.hh  pbr.fs
src/Core/: Camera.cc  Camera.hh  File.cc  File.hh  GameObject.cc  GameObject.hh  Globals.hh
src/Editor/: Editor.cc  Editor.hh  main.cc
src/Player/: Player.cc  Player.hh  main.cc
